--- a/css/animation.css
+++ b/css/animation.css
@@ -5,6 +5,7 @@
         transform: rotateX(0deg) rotateY(45deg);
     } */
     to{
+        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
