--- a/css/box.css
+++ b/css/box.css
@@ -17,12 +17,27 @@
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-animation-name: turn;
+  -moz-animation-name: turn;
+  -ms-animation-name: turn;
+  -o-animation-name: turn;
   animation-name: turn;
+  
   -webkit-animation-duration: 6s;
+  -moz-animation-duration: 6s;
+  -ms-animation-duration: 6s;
+  -o-animation-duration: 6s;
   animation-duration: 6s;
+  
   -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
+  
   -webkit-animation-direction: reverse;
+  -moz-animation-direction: reverse;
+  -ms-animation-direction: reverse;
+  -o-animation-direction: reverse;
   animation-direction: reverse;
 }
 .box-wrapper .box li {
