--- a/css/project-card.less
+++ b/css/project-card.less
@@ -39,10 +39,9 @@
 @media only screen and (max-width:768px){
     .outer-wrapper{
         flex-direction: column;
-        align-content: center;
         .inner-wrapper{
             width: 90%;
-            margin-right: 0;
+            margin:0 auto;
         }
     }
 }
