--- a/css/project-card.css
+++ b/css/project-card.css
@@ -34,10 +34,9 @@
 @media only screen and (max-width: 768px) {
   .outer-wrapper {
     flex-direction: column;
-    align-content: center;
   }
   .outer-wrapper .inner-wrapper {
     width: 90%;
-    margin-right: 0;
+    margin: 0 auto;
   }
 }
