--- a/css/animation.css
+++ b/css/animation.css
@@ -4,43 +4,51 @@
     /* form{
         transform: rotateX(0deg) rotateY(45deg);
     } */
-    to{
+    0%{
+        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+    }
+    100%{
         -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
 @-moz-keyframes turn{
-    /* form{
-        transform: rotateX(0deg) rotateY(45deg);
-    } */
-    to{
+    0%{
+        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+    }
+    100%{
         -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
 @-ms-keyframes turn{
-    /* form{
-        transform: rotateX(0deg) rotateY(45deg);
-    } */
-    to{
+    0%{
+        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+    }
+    100%{
         -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
 @-o-keyframes turn{
-    /* form{
-        transform: rotateX(0deg) rotateY(45deg);
-    } */
-    to{
+  0%{
+        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+    }
+    100%{
         -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
 @keyframes turn{
-    /* form{
-        transform: rotateX(0deg) rotateY(45deg);
-    } */
-    to{
+   0%{
+        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+    }
+    100%{
         -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
