--- a/css/animation.css
+++ b/css/animation.css
@@ -15,31 +15,31 @@
 }
 @-moz-keyframes turn{
     0%{
-        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        -moz-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
     }
     100%{
-        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
+        -moz-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
 @-ms-keyframes turn{
     0%{
-        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        -ms-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
     }
     100%{
-        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
+        -ms-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
 @-o-keyframes turn{
   0%{
-        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
+        -o-transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(0deg);
     }
     100%{
-        -webkit-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
+        -o-transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
         transform:perspective(900px) rotateX(-45deg) rotateY(360deg);
     }
 }
